# recipeAUX

./: LHAPDF.csh  README.md
AUX/: IsoDeposit.h.MODIF
Electron/: BuildFile.xml
Electron/interface/: RadialIsoCalculator.h.TMP
Electron/src/: RadialIsoCalculator.cc.TMP
Muon/: BuildFile.xml
Muon/interface/: MuonEffectiveArea.h.TMP  RadialIsoCalculator.h.TMP
Muon/src/: RadialIsoCalculator.cc.TMP
OxbridgeMT2/: .BuildFile.xml.swp  BuildFile.xml  ChangeLog  INSTALL  Makefile.am  Makefile.in  README  acinclude.m4  autogen.sh  config.h.in  configure  configure.ac  oxbridgekinetics.pc.in
OxbridgeMT2/examples/: Advanced_Mt2_332_Calculator_Example.cpp  AlgorithmComparison_Example.cpp  AlphaT_Multijet_Calculator_Example.cpp  Analytic_Mt2_2220_Calculator_Example.cpp  Analytic_Mt2_330_Calculator_Example.cpp  Analytic_Mt2_330_Stressor.cpp  Approximating_Example.cpp  Basic_MCT2_332_Calculator_Example.cpp  Basic_MPairProd_Calculator_Example.cpp  Basic_Mt2_332_Calculator_Example.cpp  Basic_Mt2_4441_Calculator_Example.cpp  Basic_Mt2_Asymmetric332_Calculator_Example.cpp  Basic_MtGen_330_Calculator_Example.cpp  Basic_MtGen_332_Calculator_Example.cpp  Basic_Nt2_332_Calculator_Example.cpp  ChengHanBisect_Mt2_332_Calculator_Example.cpp  ComparisonTester.cpp  ExampleEvent.h  Frugal_MPairProd_Calculator_Example.cpp  Frugal_MtGen_330_Calculator_Example.cpp  Frugal_MtGen_332_Calculator_Example.cpp  HowBadIs_No_ISR_Approx.cpp  M2C_332_Calculator_Example.cpp  M2C_332_Calculator_Using_Minuit2_Example.cpp  MCT_330_Calculator_Example.cpp  MC_330_Calculator_Example.cpp  PtmissQFactorRecoil_Test.cpp  SUSYPhys_Mt2_222_Calculator_Example.cpp  demo_1_for_ROOT_usage.C  helloWorld_Mt2_Example.cpp  helloWorld_Mt2_Without_Minuit2_Example.cpp
OxbridgeMT2/interface/: Advanced_Mt2_332_Calculator.h  AlphaT_Multijet_Calculator.h  Analytic_Mt2_2220_Calculator.h  Analytic_Mt2_332_Assistor.h  Basic_M2C_332_Calculator.h  Basic_MCT2_332_Calculator.h  Basic_Mt2_332_Calculator.h  Basic_Mt2_Asymmetric332_Calculator.h  Basic_MtGen_330_Calculator.h  Basic_Nt2_332_Calculator.h  ChengHanBisect_Mt2_332_Calculator.h  Mt2_Asymmetric332_Calculator.h  SUSYPhys_Mt2_222_Calculator.h  mT2Fcn_4441_a.h
OxbridgeMT2/src/: Advanced_Mt2_332_Calculator.cpp  Analytic_Mt2_2220_Calculator.cpp  Analytic_Mt2_330_Calculator.cpp  Basic_MCT2_332_Calculator.cpp  Basic_Mt2_332_Calculator.cpp  Basic_Mt2_4441_Calculator.cpp  Basic_Mt2_Asymmetric332_Calculator.cpp  Basic_Nt2_332_Calculator.cpp  ChengHanBisect_Mt2_332_Calculator.cpp  M2C_332Calculator.cpp  MCTT_332_Calculator.cpp  MCT_330_Calculator.cpp  MCTll_332_Calculator.cpp  MC_330_Calculator.cpp  Mt2Calculator.cpp  Mt2LorentzTransverseVector.cpp  Mt2LorentzVector.cpp  Mt2TwoVector.cpp  Mt2Util.cpp  Mt2Vectors.cpp  Quartic.h  SUSYPhys_Mt2_222_Calculator.cpp  mT2Fcn_4441_a.cpp  mt2_bisect.cpp
